MALAWISUP-568: added endpoint for getting only visible reasons
